<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:rowCount="9"
    android:columnCount="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:id="@+id/Edit1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/strHint1"/>


        <EditText
            android:id="@+id/Edit2"
            android:layout_columnSpan="5"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/strHint2"/>

        <Button
            android:id="@+id/BtnNum0"
            android:text="0"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="60dp"/>

        <Button
            android:id="@+id/BtnNum1"
            android:text="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum2"
            android:text="2"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum3"
            android:text="3"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum4"
            android:text="4"
            android:layout_row="2"
            android:layout_column="4"
            android:layout_width="60dp"/>

        <Button
            android:id="@+id/BtnNum5"
            android:text="5"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum6"
            android:text="6"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum7"
            android:text="7"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum8"
            android:text="8"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_width="60dp"/>
        <Button
            android:id="@+id/BtnNum9"
            android:text="9"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_width="60dp"/>


        <Button
            android:layout_columnSpan="5"
            android:layout_row="4"
            android:layout_column="0"
            android:id="@+id/BtnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/strBtnAdd"/>



        <Button
            android:layout_columnSpan="5"
            android:layout_row="5"
            android:layout_column="0"
            android:id="@+id/BtnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/strBtnSub"/>



        <Button
            android:layout_columnSpan="5"
            android:layout_row="6"
            android:layout_column="0"
            android:id="@+id/BtnMul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/strBtnMul"/>



        <Button
            android:layout_columnSpan="5"
            android:layout_row="7"
            android:layout_column="0"
            android:id="@+id/BtnDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/strBtnDiv"/>

        <TextView
            android:id="@+id/TextResult"
            android:layout_margin="5dp"
            android:layout_columnSpan="5"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/strResult"
            android:textColor="#FF0000"
            android:textSize="20dp"/>

</GridLayout>
